# GoblinGuardAi

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: VERIFICATION.MD  tic_submission.md
.github/workflows/: ci.yml  release.yml
benchmarks/: goblinguard_benchmark_v1.jsonl
data/: baseline_corpus.json  data_collection.md  goblin_examples.json
goblinguard/: __init__.py  __main__.py
goblinguard/model/: __init__.py  audit_engine.py  autoencoder.py  classifier.py  embedder.py  scanner.py
goblinguard/schemas/: __init__.py  audit_report.py  config.py
goblinguard/training/: __init__.py  evaluate.py  train_autoencoder.py  train_classifier.py
goblinguard/utils/: __init__.py  text_utils.py  visualization.py
model/: autoencoder.pt  classifier.pt  scanner_baseline.pkl
scripts/: build_benchmark.py  generate_data.py
tests/: test_audit_engine.py  test_classifier.py  test_scanner.py
tests/fixtures/: sample_outputs.json
