[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goblinguard"
version = "1.0.0"
description = "Real-time LLM output auditor for reward-hacking tics and style leakage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "GoblinGuard Maintainers", email = "maintainers@goblinguard.dev" }]
keywords = ["llm", "alignment", "rlhf", "auditing", "pytorch", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.2.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "streamlit>=1.34.0",
    "pydantic>=2.7.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "mypy>=1.9.0"]

[project.scripts]
goblinguard = "goblinguard.__main__:main"

[tool.setuptools.packages.find]
include = ["goblinguard*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
